--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,6 +28,10 @@
 @import "account";
 @import "packingorders"; 
 @import "orderdetail"; 
+@import "tabs";
+@import "alerts";
+@import "dashboard";
+@import "activity";
 
 .lesmis {
 	.links line {
