--- a/src/styles/goals.scss
+++ b/src/styles/goals.scss
@@ -58,8 +58,7 @@
 	}
 
 	.goal {
-		padding: 16px;
-		margin-top: 16px;
+		padding: 12px 16px;
 		border-top: 1px solid rgba(0,0,0,0.05);
 		margin-left: -16px;
 		margin-right: -16px;
@@ -115,6 +114,7 @@
 				flex: 1;	
 				padding-top: 3px;
 				padding-bottom: 2px;
+				color: rgba(0,0,0,0.5);
 
 				span {
 					display:inline-block;
@@ -129,14 +129,13 @@
 				font-size:14px;
 				line-height: 16px;
 				letter-spacing: 5%;
-				text-transform: uppercase;
 				padding-top: 5px;
 				padding-bottom: 2px;
-				color: #828282;
+				color: rgba(0,0,0,0.5);
 				vertical-align: middle;
 
 				.blue {
-					color: $theme-color;
+					font-weight: 700;
 				}
 			}
 
@@ -150,8 +149,8 @@
 
 		.goal-whole-bar {
 			display: flex;
-			height: 28px;
-			margin-top: 8px;
+			height: 16px;
+			margin-top: 2px;
 			margin-bottom: 4px;
 			background-color: rgba(0,0,0,0.1);
 			border-radius: 4px;
@@ -164,7 +163,7 @@
 
 		.goal-filled-bar {
 			background-color: $theme-color;
-			background: linear-gradient(to left, #2087F1 , #0E4FDF);
+			background: linear-gradient(to left, $primary , #5A4BDA);
 			color: rgba(255,255,255,0.5);
 			border-radius: 4px 0 0 4px;
 		}
