--- a/src/styles/alerts.scss
+++ b/src/styles/alerts.scss
@@ -33,8 +33,8 @@ $alert-yellow: #F8DE00;
 		border-top: 1px solid rgba(0,0,0,0.05);
 	}
 
-	.alert-text {
-		display: flex;
+	.alert-content {
+		flex: 1;
 	}
 
 	.alert-circle {
@@ -48,6 +48,7 @@ $alert-yellow: #F8DE00;
 		visibility: hidden;
 		font-size: 16px;
 		color: #bdbdbd;
+		flex: 0;
 	}
 
 	&:hover {
@@ -57,7 +58,6 @@ $alert-yellow: #F8DE00;
 	}
 
 	.alert-actions {
-		margin-left: 28px;
 		margin-top: 4px;
 	}
 
