--- a/src/styles/taskflag.scss
+++ b/src/styles/taskflag.scss
@@ -7,6 +7,9 @@
 	padding: 8px 12px 8px 12px;
 	display: flex;
 	flex-direction: row;
+	margin-top: 16px;
+	align-items: center;
+	height: 36px;
 
 	&>div {
 		flex: 0;
@@ -18,7 +21,38 @@
 	}
 
 	.task-flag-unflag {
-		color: rgba(255,255,255,0.7);
+		color: rgba(255, 255, 255, 0.8);
 		cursor: pointer;
+	}
+}
+
+.task-anomaly {
+	background-color: #f3b74b;
+	color: white;
+	border-radius: 4px;
+	line-height: 16px;
+	font-size: 12px;
+	padding: 8px 12px 8px 12px;
+	display: flex;
+	flex-direction: row;
+	margin-top: 16px;
+	align-items: center;
+	height: 36px;
+
+	&>div {
+		flex: 0;
+	}
+
+	&>div:first-child {
+		flex: 1;
+		flex-grow: 1;
+	}
+
+	a {
+		display: inline-block;
+	}
+
+	i {
+		font-size: 16px;
 	}
 }
