--- a/src/styles/oldstyles/task.scss
+++ b/src/styles/oldstyles/task.scss
@@ -49,7 +49,6 @@
   .task-attribute-table {
     border-radius: 4px;
     border: 1px solid rgba(0,0,0,0.1);
-    max-width: 400px;
     margin-bottom: 10px;
 
     .task-attribute-table-row {
@@ -171,15 +170,33 @@
     margin-right: 4px;
   }
 
-  .task_button {
+  .task-buttons {
+    display: flex;
+  }
+
+  .task-button {
     border: none;
     outline: none;
-    background-color: white;
-    color: $primary;
+    background-color: rgba(0, 0, 0, 0.05);
+    color: #4f4f4f;
+    font-family: "Apercu", "Interface", "Helvetica";
+    font-size: 14px;
+    padding: 12px 16px;
+    margin-top: 16px; 
+    display: inline-block;
+    flex: 1;
+
+    &:first-of-type {
+      margin-right: 16px;
+    }
+
+    &.disabled {
+      opacity: 0.6;
+    }
   }
 }
 
-  a, a:hover, a:visited span{
-    color: inherit;
-    text-decoration: none;
-  }
+a, a:hover, a:visited span{
+  color: inherit;
+  text-decoration: none;
+}
